# ele-autopilot-local

./: .env.template  .gitignore  AGENTS.md  README.md  app_meta.py  main.py  pyproject.toml  run.py  setup.sh  task1.txt
autopilot/: __init__.py  cli.py  config.py  job.py  job_service.py  task.py  task_action.py  task_action_out.template.json
langchain/: chat.py
middleware/: response.py
routers/: autopilot.py  system.py  tasks.py  users.py
scripts/help/: run-cli.py
scripts/help/emails/: task1.txt  task2.txt
scripts/help/run-cli-tasks/: task1.txt  task2.txt
scripts/help/shops/: task1.txt  task2.txt
utils/: chrome_profile.py
