[project]
name = "ele-autopilot-local"
version = "0.1.3"
description = "Local autopilot service for browser automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.9",
    "fastapi>=0.128.0",
    "langchain-openai>=1.1.7",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
ele-autopilot = "autopilot.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autopilot", "langchain", "middleware", "routers", "schemas", "utils"]
